[gd_scene load_steps=61 format=3 uid="uid://c7nobyl7mvb5"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_pnk3y"]
[ext_resource type="LabelSettings" uid="uid://b80rsv6f5tt4l" path="res://assets/font_themes/GL26_HUD_text.tres" id="2_ckw5v"]
[ext_resource type="PackedScene" uid="uid://bwekueaqgt72v" path="res://fireworks/fire_works.tscn" id="2_hdh5k"]
[ext_resource type="PackedScene" uid="uid://cbnfaqqnstd67" path="res://heart/heart.tscn" id="4_6vb7v"]
[ext_resource type="Texture2D" uid="uid://b6gbxjw08ugvd" path="res://assets/items/gem.png" id="4_yidvq"]
[ext_resource type="LabelSettings" uid="uid://dxq0c5cej5x58" path="res://assets/font_themes/LG_64_Title_Blue.tres" id="5_hesaw"]
[ext_resource type="Texture2D" uid="uid://ccewkqxcf648e" path="res://assets/items/coin.png" id="5_i6nlq"]
[ext_resource type="Texture2D" uid="uid://dmg4nporxsv3w" path="res://assets/items/life_star.png" id="6_54ted"]
[ext_resource type="LabelSettings" uid="uid://dk2scmxki7c27" path="res://assets/font_themes/LG_24_Subtitle_Lightblue.tres" id="6_fuukr"]
[ext_resource type="LabelSettings" uid="uid://b48pa0muq3pgf" path="res://assets/font_themes/LG_64_Congats_Brown.tres" id="7_yj7ih"]
[ext_resource type="LabelSettings" uid="uid://bfsqq3uhw0vrj" path="res://assets/font_themes/LG_38_Highscore_Teal.tres" id="8_e2bfc"]
[ext_resource type="LabelSettings" uid="uid://d3hsewic54cfn" path="res://assets/font_themes/LG_32_Highscore_Teal.tres" id="9_sxbpn"]
[ext_resource type="FontFile" uid="uid://dcy44uqef085x" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="10_76cyr"]
[ext_resource type="LabelSettings" uid="uid://jbq5sw1ktgu1" path="res://assets/font_themes/LG_24_HUD_Level_Number.tres" id="11_dlf8a"]
[ext_resource type="LabelSettings" uid="uid://d3uhvssqya8kx" path="res://assets/font_themes/LG_48_Level_Name.tres" id="12_s7buo"]
[ext_resource type="Script" path="res://game_pause_menu/QuitGameConfirm.gd" id="13_qyrmm"]
[ext_resource type="Script" path="res://game_pause_menu/QuitToMenu.gd" id="13_ustpt"]
[ext_resource type="Texture2D" uid="uid://2gbsimlwyhrx" path="res://assets/ui/menu_buttons/resume_normal.png" id="15_pagf0"]
[ext_resource type="Texture2D" uid="uid://b23plm2q070ga" path="res://assets/ui/menu_buttons/resume_pressed.png" id="16_8b1kg"]
[ext_resource type="Script" path="res://game_pause_menu/ResumeButton.gd" id="17_308eu"]
[ext_resource type="Texture2D" uid="uid://dwfv3unt7ily0" path="res://assets/ui/menu_buttons/resume_hover.png" id="17_qhx6i"]
[ext_resource type="Texture2D" uid="uid://rv6qm0ibabug" path="res://assets/ui/menu_buttons/menu_normal.png" id="19_vycrp"]
[ext_resource type="Texture2D" uid="uid://s62onqhvv37i" path="res://assets/ui/menu_buttons/menu_pressed.png" id="20_u7i16"]
[ext_resource type="Script" path="res://game_pause_menu/MenuButton.gd" id="21_5i4xn"]
[ext_resource type="Script" path="res://game_pause_menu/QuitButton.gd" id="21_i1wa2"]
[ext_resource type="Texture2D" uid="uid://b3y58birxd3xv" path="res://assets/ui/menu_buttons/menu_hover.png" id="21_m1k48"]
[ext_resource type="Texture2D" uid="uid://bn4gtre7ix5of" path="res://assets/ui/menu_buttons/quit_normal.png" id="23_rgqxj"]
[ext_resource type="Texture2D" uid="uid://dd5mjvpoca7u3" path="res://assets/ui/menu_buttons/quit_pressed.png" id="24_ocr0b"]
[ext_resource type="Texture2D" uid="uid://d300vk257tkxy" path="res://assets/ui/menu_buttons/quit_hover.png" id="25_mmpa0"]
[ext_resource type="AudioStream" uid="uid://dnhnirjv77yf" path="res://assets/sound/level-win.ogg" id="29_sq2nv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fdgxa"]
atlas = ExtResource("4_yidvq")
region = Rect2(0, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3o0q"]
atlas = ExtResource("4_yidvq")
region = Rect2(15, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4e4v"]
atlas = ExtResource("4_yidvq")
region = Rect2(30, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_52afy"]
atlas = ExtResource("4_yidvq")
region = Rect2(45, 0, 15, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkg8y"]
atlas = ExtResource("4_yidvq")
region = Rect2(60, 0, 15, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_e43ku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdgxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3o0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4e4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52afy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkg8y")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xvgw8"]
atlas = ExtResource("5_i6nlq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_etbee"]
atlas = ExtResource("5_i6nlq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfnn1"]
atlas = ExtResource("5_i6nlq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl5tl"]
atlas = ExtResource("5_i6nlq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxy7j"]
atlas = ExtResource("5_i6nlq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_23gfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvgw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etbee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfnn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl5tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxy7j")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bmffi"]
atlas = ExtResource("6_54ted")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpu13"]
atlas = ExtResource("6_54ted")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma7ry"]
atlas = ExtResource("6_54ted")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26qwd"]
atlas = ExtResource("6_54ted")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sgcw"]
atlas = ExtResource("6_54ted")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3jnr"]
atlas = ExtResource("6_54ted")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vckhw"]
atlas = ExtResource("6_54ted")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30hnf"]
atlas = ExtResource("6_54ted")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xheea"]
atlas = ExtResource("6_54ted")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fccmg"]
atlas = ExtResource("6_54ted")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec6ej"]
atlas = ExtResource("6_54ted")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awgaf"]
atlas = ExtResource("6_54ted")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb0bp"]
atlas = ExtResource("6_54ted")
region = Rect2(384, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwqoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmffi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpu13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma7ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26qwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sgcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3jnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vckhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30hnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xheea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fccmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec6ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awgaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb0bp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_sarc3"]
font = ExtResource("10_76cyr")
font_size = 28
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_m0lig"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VB_LevelComplete/LC_Back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/VB_GameOver/GO_Back:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/VB_GameComplete/GC_Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jpjkw"]
resource_name = "main_menu"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VB_LevelComplete/LC_Back:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.533333), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/VB_GameOver/GO_Back:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.533333), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/VB_GameComplete/GC_Back:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.533333), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rdyb"]
_data = {
"RESET": SubResource("Animation_m0lig"),
"main_menu": SubResource("Animation_jpjkw")
}

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pnk3y")

[node name="Fireworks" type="Container" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FireWorks" parent="Fireworks" instance=ExtResource("2_hdh5k")]
z_index = 2
position = Vector2(203, 125)
scale = Vector2(3, 3)
frame_progress = 0.425759

[node name="FireWorks4" parent="Fireworks" instance=ExtResource("2_hdh5k")]
modulate = Color(1, 0.117647, 0.129412, 1)
z_index = 2
position = Vector2(639, 87)
scale = Vector2(3, 3)
frame_progress = 0.0458118
speed_scale = 1.6

[node name="FireWorks3" parent="Fireworks" instance=ExtResource("2_hdh5k")]
modulate = Color(0.117647, 1, 0.560784, 1)
z_index = 2
position = Vector2(785, 319)
scale = Vector2(5, 5)
frame_progress = 0.487138
speed_scale = 0.8

[node name="FireWorks2" parent="Fireworks" instance=ExtResource("2_hdh5k")]
modulate = Color(0.584314, 0.313726, 1, 1)
z_index = 2
position = Vector2(263, 324)
scale = Vector2(4, 4)
frame_progress = 0.786799
speed_scale = 1.2

[node name="ScoreLabelContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 17.0
offset_top = 16.0
offset_right = -649.0
offset_bottom = 43.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="ScoreLabelContainer"]
layout_mode = 2
text = "score"
label_settings = ExtResource("2_ckw5v")
vertical_alignment = 1

[node name="GemContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 75.0
offset_bottom = 97.0
scale = Vector2(0.8, 0.8)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GemStone" type="AnimatedSprite2D" parent="GemContainer"]
position = Vector2(32.5, 27.5)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_e43ku")
autoplay = "default"
frame_progress = 0.261685

[node name="GemScoreContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 0
offset_left = 56.0
offset_top = 45.0
offset_right = 266.0
offset_bottom = 85.0

[node name="HB" type="HBoxContainer" parent="GemScoreContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="GemsFoundLabel" type="Label" parent="GemScoreContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="x" type="Label" parent="GemScoreContainer/HB"]
layout_mode = 2
text = "/"
label_settings = ExtResource("2_ckw5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemsInLevelLabel" type="Label" parent="GemScoreContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 0
offset_left = 9.0
offset_top = 76.0
offset_right = 66.0
offset_bottom = 133.0
scale = Vector2(0.8, 0.8)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Coin" type="AnimatedSprite2D" parent="CoinContainer"]
position = Vector2(28.75, 25)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_23gfp")
autoplay = "default"
frame_progress = 0.566922

[node name="CoinScoreContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 2
offset_left = 57.0
offset_top = 85.0
offset_right = 179.0
offset_bottom = 118.0

[node name="HB" type="HBoxContainer" parent="CoinScoreContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CoinsFoundLabel" type="Label" parent="CoinScoreContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")

[node name="x" type="Label" parent="CoinScoreContainer/HB"]
layout_mode = 2
text = "/"
label_settings = ExtResource("2_ckw5v")

[node name="CoinsInLevelLabel" type="Label" parent="CoinScoreContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")

[node name="StarContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 0
offset_left = 785.0
offset_top = 3.0
offset_right = 842.0
offset_bottom = 60.0
scale = Vector2(0.8, 0.8)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Star" type="AnimatedSprite2D" parent="StarContainer"]
position = Vector2(26.25, 25)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_pwqoy")
autoplay = "default"
frame_progress = 0.817036

[node name="StarScoreContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 2
offset_left = 827.0
offset_top = 12.0
offset_right = 949.0
offset_bottom = 45.0

[node name="HB" type="HBoxContainer" parent="StarScoreContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="StarsFoundLabel" type="Label" parent="StarScoreContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")

[node name="x" type="Label" parent="StarScoreContainer/HB"]
layout_mode = 2
text = "/"
label_settings = ExtResource("2_ckw5v")

[node name="StarsInLevelLabel" type="Label" parent="StarScoreContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.94902)

[node name="VB_LevelComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="LevelCompleteLevelName" type="Label" parent="ColorRect/VB_LevelComplete"]
layout_mode = 2
label_settings = ExtResource("8_e2bfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLevelComplete" type="Label" parent="ColorRect/VB_LevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("5_hesaw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LC_Back" type="Label" parent="ColorRect/VB_LevelComplete"]
layout_mode = 2
text = "Press jump for next level
"
label_settings = ExtResource("6_fuukr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB_GameOver" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VB_GameOver"]
layout_mode = 2
text = "Game over"
label_settings = ExtResource("5_hesaw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GO_Back" type="Label" parent="ColorRect/VB_GameOver"]
layout_mode = 2
text = "Press space for main menu"
label_settings = ExtResource("6_fuukr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB_GameComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
z_index = 4
layout_mode = 2
offset_left = 232.0
offset_top = 141.0
offset_right = 824.0
offset_bottom = 641.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ColorRect/VB_GameComplete"]
layout_mode = 2
text = "Congratulations!!!
"
label_settings = ExtResource("7_yj7ih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect/VB_GameComplete"]
layout_mode = 2
text = "You have finished the game
"
label_settings = ExtResource("8_e2bfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="space3" type="Label" parent="ColorRect/VB_GameComplete"]
layout_mode = 2
text = "
"
label_settings = ExtResource("8_e2bfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GC_Back" type="Label" parent="ColorRect/VB_GameComplete"]
layout_mode = 2
text = "Press space for main menu"
label_settings = ExtResource("6_fuukr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="space6" type="Label" parent="ColorRect/VB_GameComplete"]
layout_mode = 2
text = "
"
label_settings = ExtResource("8_e2bfc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VB_GameComplete"]
layout_mode = 2
size_flags_vertical = 3

[node name="FinalScore" type="Label" parent="ColorRect/VB_GameComplete/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "000"
label_settings = ExtResource("9_sxbpn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="ColorRect/VB_GameComplete/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "000"
label_settings = SubResource("LabelSettings_sarc3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rdyb")
}
autoplay = "main_menu"

[node name="HeartContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 0
offset_left = 910.0
offset_top = 7.0
offset_right = 942.0
offset_bottom = 39.0
scale = Vector2(1.2, 1.2)

[node name="Heart" parent="HeartContainer" instance=ExtResource("4_6vb7v")]
layout_mode = 2

[node name="LifeCountContainer" type="MarginContainer" parent="."]
z_index = 2
layout_mode = 0
offset_left = 953.0
offset_top = 9.0
offset_right = 993.0
offset_bottom = 49.0

[node name="HB" type="HBoxContainer" parent="LifeCountContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="x" type="Label" parent="LifeCountContainer/HB"]
layout_mode = 2
text = "x"
label_settings = ExtResource("2_ckw5v")

[node name="HeartLivesLabel" type="Label" parent="LifeCountContainer/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")

[node name="HeartContainer2" type="MarginContainer" parent="."]
visible = false
z_index = 3
layout_mode = 0
offset_left = 910.0
offset_top = 49.0
offset_right = 942.0
offset_bottom = 81.0
scale = Vector2(1.2, 1.2)

[node name="Heart" parent="HeartContainer2" instance=ExtResource("4_6vb7v")]
modulate = Color(0.458824, 0.988235, 0.717647, 1)
layout_mode = 2

[node name="LifeCountContainer2" type="MarginContainer" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 953.0
offset_top = 51.0
offset_right = 993.0
offset_bottom = 91.0

[node name="HB" type="HBoxContainer" parent="LifeCountContainer2"]
modulate = Color(0.458824, 0.988235, 0.717647, 1)
layout_mode = 2
theme_override_constants/separation = 9

[node name="x" type="Label" parent="LifeCountContainer2/HB"]
layout_mode = 2
text = "x"
label_settings = ExtResource("2_ckw5v")

[node name="HeartLivesLabel" type="Label" parent="LifeCountContainer2/HB"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_ckw5v")

[node name="LevelNameContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -42.0
offset_right = 20.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelNameContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="LevelNameContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("11_dlf8a")
horizontal_alignment = 1

[node name="LevelNameLabel" type="Label" parent="LevelNameContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("12_s7buo")
horizontal_alignment = 1

[node name="LevelNameTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GamePauseMenu" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuitToMenu" type="ConfirmationDialog" parent="GamePauseMenu"]
size = Vector2i(347, 100)
dialog_text = "Are you sure? All your progress will be lost."
script = ExtResource("13_ustpt")

[node name="QuitGameConfirm" type="ConfirmationDialog" parent="GamePauseMenu"]
title = "Quit Game"
initial_position = 1
size = Vector2i(620, 100)
dialog_text = "Are you sure? All your progress will be lost."
dialog_autowrap = true
script = ExtResource("13_qyrmm")

[node name="VBoxContainer" type="VBoxContainer" parent="GamePauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -66.0
offset_right = 32.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="TextureButton" parent="GamePauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("15_pagf0")
texture_pressed = ExtResource("16_8b1kg")
texture_hover = ExtResource("17_qhx6i")
script = ExtResource("17_308eu")

[node name="MenuButton" type="TextureButton" parent="GamePauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("19_vycrp")
texture_pressed = ExtResource("20_u7i16")
texture_hover = ExtResource("21_m1k48")
script = ExtResource("21_5i4xn")

[node name="QuitButton" type="TextureButton" parent="GamePauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("23_rgqxj")
texture_pressed = ExtResource("24_ocr0b")
texture_hover = ExtResource("25_mmpa0")
script = ExtResource("21_i1wa2")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="LevelWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_sq2nv")

[connection signal="animation_looped" from="Fireworks/FireWorks" to="." method="_on_fire_works_animation_looped"]
[connection signal="animation_looped" from="Fireworks/FireWorks4" to="." method="_on_fire_works_4_animation_looped"]
[connection signal="animation_looped" from="Fireworks/FireWorks3" to="." method="_on_fire_works_3_animation_looped"]
[connection signal="animation_looped" from="Fireworks/FireWorks2" to="." method="_on_fire_works_2_animation_looped"]
[connection signal="timeout" from="LevelNameTimer" to="." method="_on_level_name_timer_timeout"]
[connection signal="confirmed" from="GamePauseMenu/QuitToMenu" to="GamePauseMenu/QuitToMenu" method="_on_confirmed"]
[connection signal="confirmed" from="GamePauseMenu/QuitGameConfirm" to="GamePauseMenu/QuitGameConfirm" method="_on_confirmed"]
[connection signal="pressed" from="GamePauseMenu/VBoxContainer/ResumeButton" to="GamePauseMenu/VBoxContainer/ResumeButton" method="_on_pressed"]
[connection signal="pressed" from="GamePauseMenu/VBoxContainer/MenuButton" to="GamePauseMenu/VBoxContainer/MenuButton" method="_on_pressed"]
[connection signal="pressed" from="GamePauseMenu/VBoxContainer/QuitButton" to="GamePauseMenu/VBoxContainer/QuitButton" method="_on_pressed"]
